<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="?attr/titleColor"
    android:clipToPadding="true">
	<include layout="@layout/java_tool"/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbars="none">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:padding="@dimen/activity_margin"
			android:orientation="vertical">
			<ImageView
				android:layout_width="120dp"
				android:layout_height="120dp"
				android:layout_marginTop="8dp"
				android:src="@mipmap/ic_logo_vbes"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="邠心工作室"
				android:textColor="?attr/colorAccent"
				android:gravity="center_vertical"
				android:textSize="20sp"
				android:layout_marginTop="5dp"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="VbeStudio"
				android:textColor="?attr/textSecondary"
				android:gravity="center_vertical"
				android:textSize="14sp"
				android:layout_marginTop="5dp"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin_double"
				android:textColor="?attr/textPrimary"
				android:textSize="16sp"
				android:textStyle="bold"
				android:text="团队介绍"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin_half"
				android:textColor="?attr/textPrimary"
				android:textSize="16sp"
				android:text="@string/about_us"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin"
				android:textColor="?attr/textPrimary"
				android:textSize="16sp"
				android:textStyle="bold"
				android:text="联系我们"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin_half"
				android:text="@string/about_join"
				android:textColor="?attr/textPrimary"
				android:textSize="16sp"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_margin_half"
				android:text="@string/about_mark"
				android:textSize="16sp"
				android:textColor="?attr/textSecondary"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

