<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:orientation="vertical">
	<com.vbea.java21.widget.SlidingView
		android:id="@+id/item_slidingBox"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/item_leftMenu"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:textSize="14sp"
				android:padding="10dp"
				android:gravity="center"
				android:text="@string/txt_setreaded"
				android:textColor="@color/white"
				android:background="?attr/colorAccent"/>
			<LinearLayout
				android:id="@+id/item_messageBox"
				android:background="@drawable/btn_menu"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingTop="@dimen/margin_12"
				android:paddingLeft="@dimen/activity_vertical_margin"
				android:paddingRight="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/margin_12"
				android:orientation="vertical">
				<TableRow
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">
					<TextView
						android:id="@+id/item_messageTitle"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:singleLine="true"
						android:textSize="15sp"
						android:textColor="?attr/textPrimary"/>
					<TextView
						android:id="@+id/item_messageDate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingTop="2dp"
						android:textSize="12sp"
						android:textColor="@color/gray"
						android:singleLine="true"/>
				</TableRow>
				<TextView
					android:id="@+id/item_messageContent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:textColor="@color/grey"/>
			</LinearLayout>
			<TextView
				android:id="@+id/item_rightMenu"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:padding="12dp"
				android:textSize="16sp"
				android:gravity="center"
				android:text="@string/txt_delete"
				android:textColor="@color/white"
				android:background="@color/alred"/>
		</LinearLayout>
	</com.vbea.java21.widget.SlidingView>
	<TextView
		android:id="@+id/item_end"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/dividers"
		android:gravity="center"
		android:padding="@dimen/activity_half_margin"
		android:text="@string/txt_lastrow"
		android:textSize="12sp"
		android:textColor="?attr/textSecondary"
		android:visibility="gone"/>
</LinearLayout>

