<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
    android:clipToPadding="false"
	android:background="?attr/titleColor">
	<include layout="@layout/java_tool"/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:divider="@drawable/ic_divider"
			android:showDividers="middle">
			<!--LinearLayout
				android:id="@+id/btnSetstate"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_menu"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="软件状态"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:paddingRight="15dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<TextView
					android:id="@+id/txt_setState"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:text="试用中"
					android:gravity="start|center_vertical"
					android:paddingRight="15dp"
					android:textColor="?attr/colorAccent"
					android:textSize="14sp"/>
			</LinearLayout-->
			<TextView
				android:id="@+id/btn_setTheme"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="@string/setheme"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<TextView
				android:id="@+id/btn_setImage"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="@string/setimage"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<TextView
				android:id="@+id/btn_setTextsize"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="字体大小"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<LinearLayout
				android:id="@+id/btnSetmusic"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_normal"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="音乐加载"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:paddingRight="15dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<Switch
					android:id="@+id/swtMusic"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center_vertical"
					android:layout_marginRight="10dp"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/btnSettips"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_normal"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="消息通知"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:paddingRight="15dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<Switch
					android:id="@+id/swtTips"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center_vertical"
					android:layout_marginRight="10dp"/>
			</LinearLayout>
			<RelativeLayout
				android:id="@+id/btn_setClearCache"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_menu">
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:text="清除网页缓存"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
				<TextView
					android:id="@+id/txt_setCacheSize"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:textSize="14sp"
					android:text="N/A"
					android:textColor="?attr/colorAccent"/>
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/btn_setClearCacheImage"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_menu">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text="清除图片缓存"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<TextView
					android:id="@+id/txt_setCacheImageSize"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="15dp"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:textSize="14sp"
					android:text="N/A"
					android:textColor="?attr/colorAccent"/>
			</RelativeLayout>
			<TextView
				android:id="@+id/btn_setHistory"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="清除阅读历史记录"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<TextView
				android:id="@+id/btn_setScore"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="给软件评分"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<TextView
				android:id="@+id/btn_setJoin"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="@string/aboutus"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<TextView
				android:id="@+id/btn_setHelp"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="@string/feedback"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"/>
			<TextView
				android:id="@+id/btn_setDonate"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:text="@string/donate"
				android:background="@drawable/btn_menu"
				android:gravity="start|center_vertical"
				android:paddingLeft="20dp"
				android:paddingRight="15dp"
				android:textColor="?attr/textPrimary"
				android:textSize="17sp"
				android:visibility="gone"/>
			<LinearLayout
				android:id="@+id/btnSetadv"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_normal"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="去广告"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:paddingRight="15dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<Switch
					android:id="@+id/swtAdv"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center_vertical"
					android:layout_marginRight="10dp"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/btnSetadvwel"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_normal"
				android:orientation="horizontal"
				android:visibility="gone">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="欢迎页广告"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:paddingRight="15dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<Switch
					android:id="@+id/swtAdvwel"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center_vertical"
					android:layout_marginRight="10dp"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/btnUpdate"
				android:layout_width="fill_parent"
				android:layout_height="56dp"
				android:background="@drawable/btn_menu"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="@string/about"
					android:gravity="start|center_vertical"
					android:paddingLeft="20dp"
					android:paddingRight="10dp"
					android:textColor="?attr/textPrimary"
					android:textSize="17sp"/>
				<TextView
					android:id="@+id/btn_setAbout"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:text="@string/update"
					android:gravity="start|center_vertical"
					android:paddingRight="15dp"
					android:textColor="?attr/colorAccent"
					android:textSize="14sp"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

